# tus_yuurikai_system

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  diesel.toml  lockerdata.csv  package-lock.json  run.sh
.github/workflows/: auto-release.yml  pr-label-check.yml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx
migrations/2024-08-13-094626_create_student/: down.sql  up.sql
migrations/2024-08-13-095950_create_studentpair/: down.sql  up.sql
migrations/2024-08-18-115327_create_locker/: down.sql  up.sql
migrations/2024-08-18-115712_create_assignment_record/: down.sql  up.sql
migrations/2024-08-19-155341_create_auth/: down.sql  up.sql
migrations/2024-10-13-152441_create_admin/: down.sql  up.sql
migrations/2024-11-15-094630_create_locker_auth_info/: down.sql  up.sql
migrations/2024-11-21-141439_create_circle_auth_info/: down.sql  up.sql
migrations/2024-12-01-035000_create_representatives/: down.sql  up.sql
migrations/2024-12-01-035910_create_organization/: down.sql  up.sql
migrations/2024-12-01-040123_create_registration/: down.sql  up.sql
migrations/2025-01-18-130459_create_time/: down.sql  up.sql
src/: adapters.rs  db_connector.rs  domain.rs  infrastructure.rs  lib.rs  main.rs  models.rs  schema.rs  test.json  usecase.rs  utils.rs
src/adapters/: controller.rs  httpmodels.rs  repository.rs
src/domain/: assignment.rs  circle.rs  googleapis.rs  locker.rs  student.rs  student_pair.rs
src/infrastracture/: models.rs  router.rs
src/infrastructure/: models.rs  router.rs
src/usecase/: admin.rs  assignment_record.rs  auth.rs  locker.rs  (+6 more)
tests/: availability.rs  healthcheck.rs  lockerregister.rs  lockerreset.rs  login.rs  usersearch.rs
(+81 files in other folders)
