[package]
name = "tus_yuurikai_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
utoipa = { version = "4", features = ["rocket_extras"]}
utoipa-swagger-ui = { version = "7", features = ["rocket"]}
