[package]
name = "tus_yuurikai_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.122"
utoipa = { version = "4", features = ["rocket_extras"]}
utoipa-swagger-ui = { version = "7", features = ["rocket"]}
diesel = { version = "2.2.0", features = ["postgres", "chrono", "uuid"] }
dotenv = "0.15.0"
chrono = "0.4.38"
uuid = "1.10.0"
lettre = "=0.11.7"
