[package]
name = "tus_yuurikai_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.122"
utoipa = { version = "4", features = ["rocket_extras"]}
utoipa-swagger-ui = { version = "7", features = ["rocket"]}
diesel = { version = "2.2.0", features = ["postgres", "chrono", "uuid", "r2d2"] }
dotenv = "0.15.0"
chrono = "0.4.38"
uuid = "1.10.0"
lettre = "=0.11.7"
rand = "0.8.5"
async-trait = "0.1.81"
jsonwebtoken = "9"
rocket_cors = "0.6.0"
reqwest = { version = "0.12.12", features = ["json"]}
regex = "1.11.1"
argon2 = { version = "0.5.3", features = ["password-hash"] }